--- a/Six AM.html
+++ b/Six AM.html
@@ -6,20 +6,20 @@
 -->
 <html>
 	<head>
-		<title>Tennyaki</title>
+		<title>Six A.M.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main1.css" />
+		<link rel="stylesheet" href="assets/css/main4.css" />
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/t02.jpg" alt="" /></a>
-					<h1><strong>The moment </strong>of<br />
-					The Visible Flame<br />
-					<!--<a href="http://html5up.net">HTML5 UP</a>.--></h1>
+				<!--	<a href="#" class="image avatar"><img src="images/f10.jpg" alt="" /></a> -->
+					<h1><strong>A Place</strong><br />
+					You can never grow up<br />
+					<!--crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 				</div>
 			</header>
 
@@ -29,12 +29,20 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Tennyaki<br />
-							</h2>
+							<h2>Take a rest here</h2>
+								<br>
+							<h4>我想，慢慢长大</h4>
 						</header>
-						<p>From raw resources to fancy dishes, the process is enjoyable to watch</p>
+						<p>全世界都在催促我长大，只有迪士尼还在守护我内心的美好童话<br>
+						Teenage is the most confusing age I've ever met, sometimes I was been treated 
+						like an adult, sometimes like a child. For most of times, I lost the define of myself.
+						<br>
+						But I do know, when the whole world is pushing me to grow up, I may take a rest at Disneyland and enjoy it just like a naive child. 
+						</p><br>
+
+						
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">View</a></li>
 						</ul>
 					</section>
 
@@ -43,43 +51,33 @@
 						<h2>Photos</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/t02.jpg" class="image fit thumb"><img src="images/t02.jpg" alt="" /></a>
-								<h3>Onsen Tamago with Caviar</h3>
-								<p>鱼籽酱温泉蛋</p>
+								<a href="images/62.jpg" class="image fit thumb"><img src="images/62.jpg" alt="" /></a>
+								<h3>The Castle and Balloons</h3>
+								<p>Disneyland has the most colors in the World</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/t03.jpg" class="image fit thumb"><img src="images/t03.jpg" alt="" /></a>
-								<h3>Australian Live Lobster</h3>
-								<p>澳洲鲜活龙虾</p>
+								<a href="images/63.jpg" class="image fit thumb"><img src="images/63.jpg" alt="" /></a>
+								<h3>Merry-go-round</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/t04.jpg" class="image fit thumb"><img src="images/t04.jpg" alt="" /></a>
-								<h3>Australian Live Abalone with Seaweed Sause</h3>
-								<p>澳洲鲜活鲍鱼佐海苔酱</p>
+								<a href="images/64.jpg" class="image fit thumb"><img src="images/64.jpg" alt="" /></a>
+								<h3>Bubbles</h3>
+								<p>I shot this when I walked passby a store, the bubble machine was blowing bubbles to attract visitors. Successfully, it got me. </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/t05.jpg" class="image fit thumb"><img src="images/t05.jpg" alt="" /></a>
-								<h3>Australian Angus Grain-Fed Fresh Beef Rib-Eye Steak</h3>
-								<p>澳洲安格斯谷饲冰鲜眼肉牛排</p>
+								<a href="images/65.jpg" class="image fit thumb"><img src="images/65.jpg" alt="" /></a>
+								<h3>Light and U-Slide</h3>
+								<p>The sky's getting dark, I love to take the U-Slide at this time, where I can view the Disneyland at peak and the sunset's not far away</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/t06.jpg" class="image fit thumb"><img src="images/t06.jpg" alt="" /></a>
-								<h3>Australian Angus Grain-Fed Fresh Beef Rib-Eye Steak</h3>
-								<p>澳洲安格斯谷饲冰鲜眼肉牛排</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/t08.jpg" class="image fit thumb"><img src="images/t08.jpg" alt="" /></a>
-								<h3>Flame Icecream</h3>
-								<p>火焰冰激凌</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/t07.jpg" class="image fit thumb"><img src="images/t07.jpg" alt="" /></a>
-								<h3>Onsen Tamago with Caviar</h3>
-								<p>鱼籽酱温泉蛋</p>
+								<a href="images/61.jpg" class="image fit thumb"><img src="images/61.jpg" alt="" /></a>
+								<h3>Night Castle</h3>
+								<p>Last photo I took before I turned myself to the direction of exit, SEE YOU NEXT TIME!</p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="Binjiang.html" class="button">NEXT Series</a></li>
+							<li><a href="tennyaki.html" class="button">NEXT Series</a></li>
 						</ul>
 						<ul class="actions">
 							<li><a href="index.html" class="button">Back to MAIN</a></li>
@@ -100,7 +98,7 @@
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul-->
 					<ul class="copyright">
-						<li>&copy;Jinyuan</li><!--li>Design: <a href="http://html5up.net">HTML5 UP</a></li-->
+						<li>&copy; Jinyuan</li><!--li>Design: <a href="http://html5up.net">HTML5 UP</a></li-->
 					</ul>
 				</div>
 			</footer>
