--- a/index page 2.html
+++ b/index page 2.html
@@ -41,10 +41,10 @@
 							<!--li><a href="elements.html">Cooperations</a></li-->
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<!--li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li-->
+								<li><a href="https://www.instagram.com/lindaaz_0724/?hl=zh-cn" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<!--li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li-->
 						</ul>
 					</nav>
 
@@ -52,45 +52,67 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<!--article class="post featured">
+							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">2020</span>
+									<h2><a href="#">SHOTS<br />
+									Unexpected</a></h2>
+									<p>This portfolio consists my beloved PHOTOS</p>
 								</header>
-								<a href="project1.html" class="image main"><img src="images/rain.JPG" alt="" /></a>
+								<a href="loves.html" class="image main"><img src="images/L4.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Photos</a></li>
+									<li><a href="loves.html" class="button large">View Photos</a></li>
 								</ul>
-							</article-->
+							</article>
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
 										<span class="date">September 6, 2020</span>
-										<h2><a href="#">Six<br/>
+										<h2><a href="Six AM.html">Six<br/>
 										In the Morning</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="Six AM.html" class="image fit"><img src="images/61.jpg" alt="" /></a>
+									<p>The fast-pace city seems a bit different at this time...</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Photos</a></li>
+										<li><a href="Six AM.html" class="button">View Photos</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">September 10, 2020</span>
-										<h2><a href="#">Happy<br />
-										Teacher's Day</a></h2>
+										<span class="date">September 12 & 26, 2020</span>
+										<h2><a href="suis.html">SUIS<br />
+										My High School</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="suis.html" class="image fit"><img src="images/U6.jpg" alt="" /></a>
+									<p>7 Years, too much to say</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Photos</a></li>
+										<li><a href="suis.html" class="button">View Photos</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">September 19, 2020</span>
+										<h2><a href="Lights.html">Light<br />
+										ON</a></h2>
+									</header>
+									<a href="Lights.html" class="image fit"><img src="images/Light1.jpg" alt="" /></a>
+									<p>Light can guide you back to home</p>
+									<ul class="actions special">
+										<li><a href="Lights.html" class="button">View Photos</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">September 20, 2020</span>
+										<h2><a href="Days out.html">Days<br />
+										Out</a></h2>
+									</header>
+									<a href="Days out.html" class="image fit"><img src="images/out2.jpg" alt="" /></a>
+									<p>Standing on the Road. ZhaPu, you can see...</p>
+									<ul class="actions special">
+										<li><a href="Days out.html" class="button">View Photos</a></li>
 									</ul>
 								</article>
 							</section>
