--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<ul class="links">
+						<ul class="link">
 							<li class="active"><a href="index.html">Gallery</a></li>
-							<li><a href="aboutme.html">About me</a></li>
+							<li><a href="intro.html">About me</a></li>
 							<!--li><a href="elements.html">Cooperations</a></li-->
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<!--li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li-->
+								<li><a href="https://www.instagram.com/lindaaz_0724/?hl=zh-cn" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<!--li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li-->
 						</ul>
 					</nav>
 
@@ -55,7 +55,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">September, 2020</span>
-									<h2><a href="#">An Unknown Day</a></h2>
+									<h2><a href="About Krystal.html">An Unknown Day</a></h2>
 									<h3>About KRYSTAL</h3>
 									<p>This photo series “About Krystal” portrays the issues that high school students face in contemporary society such as loneliness for 
 										not having parents’ companionship, emotional instability caused by puberty, and limited time of sleep due to the large amount of 
@@ -63,7 +63,7 @@
 								</header>
 								<a href="About Krystal.html" class="image main"><img src="images/metro.JPG" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Photos</a></li>
+									<li><a href="About Krystal.html" class="button large">View Photos</a></li>
 								</ul>
 							</article>
 
@@ -72,23 +72,35 @@
 								<article>
 									<header>
 										<span class="date">July 15, 2020</span>
-										<h2><a href="#">Shanghai<br />
+										<h2><a href="Disney.html">Shanghai<br />
 										Disneyland</a></h2>
 									</header>
 									<a href="Disney.html" class="image fit"><img src="images/d01-1.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>By the destination of Line 11 of Shanghai Metro, there's a world you will find 100% Happiness.</p>
 									<ul class="actions special">
 										<li><a href="Disney.html" class="button">View Photos</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
+										<span class="date">August 23, 2020</span>
+										<h2><a href="Songjiang Film Studio.html">Song Jiang<br />
+										Film Studio</a></h2>
+									</header>
+									<a href="Songjiang Film Studio.html" class="image fit"><img src="images/f01.jpg" alt="" /></a>
+									<p>2 Hours of travelling, I went back to 1940s</p>
+									<ul class="actions special">
+										<li><a href="Songjiang Film Studio.html" class="button">View Photos</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">August 9, 2020</span>
-										<h2><a href="#">Teppanyaki<br />
+										<h2><a href="tennyaki.html">Teppanyaki<br />
 										铁板烧</a></h2>
 									</header>
 									<a href="tennyaki.html" class="image fit"><img src="images/t01.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Food heals</p>
 									<ul class="actions special">
 										<li><a href="tennyaki.html" class="button">View Photos</a></li>
 									</ul>
@@ -96,49 +108,38 @@
 								<article>
 									<header>
 										<span class="date">August 22, 2020</span>
-										<h2><a href="#">Good night<br />
+										<h2><a href="Binjiang.html">Good night<br />
 										BinJiang AVENUE</a></h2>
 									</header>
 									<a href="Binjiang.html" class="image fit"><img src="images/b01.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>The wind blows, the city's beautiful</p>
 									<ul class="actions special">
 										<li><a href="Binjiang.html" class="button">View Photos</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<span class="date">August 23, 2020</span>
-										<h2><a href="#">SongJiang<br />
-										Film Studio</a></h2>
-									</header>
-									<a href="Songjiang Film Studio.html" class="image fit"><img src="images/f01.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="action special">
-										<li><a href="Songjiang Film Studio.html" class="button">View Photos</a></li>
-									</ul>
-								</article>
+								
 								<article>
 									<header>
 										<span class="date">August 27, 2020</span>
-										<h2><a href="#">TX<br />
+										<h2><a href="TX Huaihai.html">TX<br />
 										Huai Hai</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="TX Huaihai.html" class="image fit"><img src="images/h5.jpg" alt="" /></a>
+									<p>Join the youngsters!</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Photos</a></li>
+										<li><a href="TX Huaihai.html" class="button">View Photos</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">August 30 - September 1, 2020</span>
-										<h2><a href="#">Orenda<br />
+										<h2><a href="Orenda.html">Orenda<br />
 										Chong Ming</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="Orenda.html" class="image fit"><img src="images/O16.jpg" alt="" /></a>
+									<p>A short vacation with my family (Relaxed & Enjoyable)</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Photos</a></li>
+										<li><a href="Orenda.html" class="button">View Photos</a></li>
 									</ul>
 								</article>
 							</section>
