--- a/loves.html
+++ b/loves.html
@@ -56,7 +56,7 @@
 						<h2>Photos</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/“About Me''.jpg" class="image fit thumb"><img src="images/“About Me''.jpg" alt="" /></a>
+								<a href="images/L1.jpg" class="image fit thumb"><img src="images/L1.jpg" alt="" /></a>
 								<h3>About Krystal</h3>
 								<p>This is a photo collage of a morning scene in my city (Shanghai). The scene is composed of delicious breakfast, hardworking workers, 
 									morning exercise group and Krystal, a high school student who are waiting for the metro to school. The purpose of this photo is to give 
@@ -71,19 +71,7 @@
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/''Just For a Few minutes''.jpg" class="image fit thumb"><img src="images/''Just For a Few minutes''.jpg" alt="" /></a>
-								<h3>Just For a Few minutes</h3>
-								<p>In this photograph, I want to propose a very realistic moment for high school students - taking a nap on the public transportation. Intensive 
-									exams and school assignments often take away our precious sleeping hours, therefore we can only use fragmented period to catch up on sleep. 
-									I placed my camera two rows after Krystal and shot from my eye level, in order to capture her exhausting facial expression. Also, viewers are 
-									easier to be drawn into the photo from my eye level as if they are passengers sitting behind her. I did not purposely alter the color of this 
-									image because I want to present this scene in the most realistic way since it is very common in our daily lives.
-									<br>
-									Photo by: Sony A6400
-									</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/''Bicycles''.jpg" class="image fit thumb"><img src="images/''Bicycles''.jpg" alt="" /></a>
+								<a href="images/L2.jpg" class="image fit thumb"><img src="images/L2.jpg" alt="" /></a>
 								<h3>Bicycles</h3>
 								<p>Although nowadays there are various convenient transportations that we can choose from, bicycles are still Krystal’s favorite. She often 
 									commutes in bicycles from home to school, and during this period, she likes to indulge in her imagination as she looks around, observes, 
@@ -97,7 +85,7 @@
 						
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/''Sky''.jpg" class="image fit thumb"><img src="images/''Sky''.jpg" alt="" /></a>
+								<a href="images/L3.jpg" class="image fit thumb"><img src="images/L3.jpg" alt="" /></a>
 								<h3>Sky</h3>
 								<p>Krystal loves to stare at the boundless sky and zone out, and she always pulls out her camera in order to look at the 
 									sky in a closer distance, in her words: she wants to be closer to the sky. To her, the moment of looking up can 
@@ -109,7 +97,7 @@
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/''Friend''.jpg" class="image fit thumb"><img src="images/''Friend''.jpg" alt="" /></a>
+								<a href="images/L4.jpg" class="image fit thumb"><img src="images/L4.jpg" alt="" /></a>
 								<h3>Friends</h3>
 								<p>For most high school students in Shanghai, they lack companionship since their parents are busy with their work, 
 									therefore, despite classmates, pets are the only ones they can spend time with. I used reflection in this photo 
@@ -121,7 +109,7 @@
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Moment .jpg" class="image fit thumb"><img src="images/Moment .jpg" alt="" /></a>
+								<a href="images/L5.jpg" class="image fit thumb"><img src="images/L5.JPG" alt="" /></a>
 								<h3>Jump</h3>
 								<p>This photo is inspired by the well-known photographer Henri Cartier-Bresson’s “The Decisive Moment”. In 
 									this image, Krystal is jumping over a puddle from yesterday’s rain. This is an enjoyable moment many 
@@ -149,7 +137,7 @@
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Phone .jpg" class="image fit thumb"><img src="images/Phone .jpg" alt="" /></a>
+								<a href="images/fulls/Phone .jpg" class="image fit thumb"><img src="images/Phone .jpg" alt="" /></a>
 								<h3>Phones</h3>
 								<p>Cell phone has become an inseparable part of our daily lives. We use it for communication, internet surfing, 
 									catching up the newest event in the world, etc. In this photo, I edited the most commonly used apps to fill 
@@ -161,7 +149,7 @@
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Exercise .jpg" class="image fit thumb"><img src="images/Exercise .jpg" alt="" /></a>
+								<a href="images/fulls/Exercise .jpg" class="image fit thumb"><img src="images/Exercise .jpg" alt="" /></a>
 								<h3>Jogging</h3>
 								<p>Body shape and appearance are emerging topics around high school students, as we start to learn how to dress and how 
 									to put on makeups. We are more sensitive to the other’s comments, and because of that, Krystal always takes out some 
@@ -175,7 +163,7 @@
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Emotion .jpg" class="image fit thumb"><img src="images/Emotion .jpg" alt="" /></a>
+								<a href="images/fulls/Emotion .jpg" class="image fit thumb"><img src="images/Emotion .jpg" alt="" /></a>
 								<h3>Emotions</h3>
 								<p>This image is consisted of 5 different images, and as the light intensity gradually decreases from the first one of the 
 									left to the last one, the emotion of Krystal changes drastically. Emotional instability is something that bothers high 
@@ -190,14 +178,11 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="Disney.html" class="button">NEXT Series</a></li>
-						</ul>
-						<ul class="actions">
-							<li><a href="index.html" class="button">Back to MAIN</a></li>
+							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
-				<!-- Three >
+				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p></p>
@@ -233,7 +218,7 @@
 								</ul>
 							</div>
 						</div>
-					</section-->
+					</section>
 
 				<!-- Four -->
 				<!--
