--- a/suis.html
+++ b/suis.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>BinJiang Avenue</title>
+		<title>Six A.M.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main3.css" />
+		<link rel="stylesheet" href="assets/css/main4.css" />
 	</head>
 	<body class="is-preload">
 
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 				<!--	<a href="#" class="image avatar"><img src="images/f10.jpg" alt="" /></a> -->
-					<!--h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1-->
+					<h1><strong>A Place</strong><br />
+					You can never grow up<br />
+					<!--crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 				</div>
 			</header>
 
@@ -29,70 +29,73 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>The BinJiang Avenue<br />
-							of THE EAST BOUND</h2>
+							<h2>Take a rest here</h2>
+								<br>
+							<h4>我想，慢慢长大</h4>
 						</header>
-						<p>Year 2020, I moved from West bound to the East bound, my friend who usually walks with me left China
-						 <br>  It's still the same HuangPu River, but there're some differences, I still can't tell it by now...
-						</p>
+						<p>全世界都在催促我长大，只有迪士尼还在守护我内心的美好童话<br>
+						Teenage is the most confusing age I've ever met, sometimes I was been treated 
+						like an adult, sometimes like a child. For most of times, I lost the define of myself.
+						<br>
+						But I do know, when the whole world is pushing me to grow up, I may take a rest at Disneyland and enjoy it just like a naive child. 
+						</p><br>
+
+						
 						<ul class="actions">
-							<li><a href="#" class="button">View More</a></li>
+							<li><a href="#" class="button">View</a></li>
 						</ul>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
 						<h2>Photos</h2>
-						<p>All digitally shot by A6400</p>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/b01.jpg" class="image fit thumb"><img src="images/b01.jpg" alt="" /></a>
-								<h3></h3>
+								<a href="images/U1.jpg" class="image fit thumb"><img src="images/U1.jpg" alt="" /></a>
+								<h3>The Castle and Balloons</h3>
+								<p>Disneyland has the most colors in the World</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/U2.jpg" class="image fit thumb"><img src="images/U2.jpg" alt="" /></a>
+								<h3>Merry-go-round</h3>
 								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/b07.jpg" class="image fit thumb"><img src="images/b07.jpg" alt="" /></a>
-								<h3></h3>
-								<p></p>
+								<a href="images/U3.jpg" class="image fit thumb"><img src="images/U3.jpg" alt="" /></a>
+								<h3>Bubbles</h3>
+								<p>I shot this when I walked passby a store, the bubble machine was blowing bubbles to attract visitors. Successfully, it got me. </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/b03.jpg" class="image fit thumb"><img src="images/b03.jpg" alt="" /></a>
-								<h3></h3>
-								<p></p>
+								<a href="images/U4.jpg" class="image fit thumb"><img src="images/U4.jpg" alt="" /></a>
+								<h3>Light and U-Slide</h3>
+								<p>The sky's getting dark, I love to take the U-Slide at this time, where I can view the Disneyland at peak and the sunset's not far away</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/b04.jpg" class="image fit thumb"><img src="images/b04.jpg" alt="" /></a>
-								<h3></h3>
-								<p></p>
+								<a href="images/U5.jpg" class="image fit thumb"><img src="images/U5.jpg" alt="" /></a>
+								<h3>Night Castle</h3>
+								<p>Last photo I took before I turned myself to the direction of exit, SEE YOU NEXT TIME!</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/b05.jpg" class="image fit thumb"><img src="images/b05.jpg" alt="" /></a>
-								<h3></h3>
-								<p></p>
+								<a href="images/U6.jpg" class="image fit thumb"><img src="images/U6.jpg" alt="" /></a>
+								<h3>Night Castle</h3>
+								<p>Last photo I took before I turned myself to the direction of exit, SEE YOU NEXT TIME!</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/b06.jpg" class="image fit thumb"><img src="images/b06.jpg" alt="" /></a>
-								<h3></h3>
-								<p></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/b02.jpg" class="image fit thumb"><img src="images/b02.jpg" alt="" /></a>
-								<h3></h3>
-								<p></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/b08.jpg" class="image fit thumb"><img src="images/b08.jpg" alt="" /></a>
-								<h3></h3>
-								<p></p>
+								<a href="images/U7.jpg" class="image fit thumb"><img src="images/U7.jpg" alt="" /></a>
+								<h3>Night Castle</h3>
+								<p>Last photo I took before I turned myself to the direction of exit, SEE YOU NEXT TIME!</p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="Songjiang Film Studio.html" class="button">NEXT Series</a></li>
+							<li><a href="tennyaki.html" class="button">NEXT Series</a></li>
 						</ul>
 						<ul class="actions">
 							<li><a href="index.html" class="button">Back to MAIN</a></li>
 						</ul>
 					</section>
+
+				
+
 			</div>
 
 		<!-- Footer -->
